--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "18.x"
-      - run: npm CI
+      - run: npm ci
       - run: npm run format:check
       - run: npm run test -- --coverage
         env:
