--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           node-version: "18.x"
       - run: npm ci
+      - run: npm run format 
       - run: npm run format:check
       - run: npm run test -- --coverage
         env:
