--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,20 @@ name: CI
 on: 
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
 jobs:
   build: 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-node-${{ hashFiles('**/package-lock.json')}}
+          restore-key: |
+            ${{ runner.os}}-node-
       - name: Use NodeJs
         uses: actions/setup-node@v1
         with:
@@ -17,3 +26,9 @@ jobs:
       - run: npm run test -- --coverage
         env:
          CI: true
+      - name: Project Build 
+        if: github.event_name == 'push'
+        run: npm run build 
+      - name: Deploy to Stage
+        if: github.ecent_name == 'push'
+        run: npx surge
