--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 on: 
   pull_request:
-    branches: [develop]
+    branches: [develop, master]
   push:
-    branches: [develop]
+    branches: [develop, master]
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -40,7 +40,11 @@ jobs:
         with:
           name: build
           path: build
-      - uses: actions/download-artifact
+      - name: Create a Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx semantic-release
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
       - name: Deploy to Stage
         if: github.ecent_name == 'push'
         run: npx surge
