--- a/.github/workflows/ci 2.yml
+++ b/.github/workflows/ci 2.yml
@@ -1,9 +1,9 @@
 name: CI
 on: 
   pull_request:
-    branches: [develop, master]
+    branches: [develop]
   push:
-    branches: [develop, master]
+    branches: [develop]
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -40,16 +40,7 @@ jobs:
         with:
           name: build
           path: build
-      - name: ZIP Assets
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: |
-          zip -r build.zip ./build
-          zip -r coverage.zip ./coverage
-      - name: Create a Release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master' && failure()
-        run: npx semantic-release
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+      - uses: actions/download-artifact
       - name: Deploy to Stage
         if: github.ecent_name == 'push'
         run: npx surge
