--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
   },
   "eslintConfig": {
@@ -48,5 +49,10 @@
     "husky": "^8.0.3",
     "prettier": "2.8.2",
     "semantic-release": "^20.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
